# GNOME-CLI-WallpaperChanger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SubmoduleUpdater.sh  build.sh
App/: main.cpp
App/FileManager/: FileManager.cpp  FileManager.hpp
App/Wallpaper/: Wallpaper.cpp  Wallpaper.hpp
Tests/: test_example.cpp  test_main.cpp
Tests/UT/: FileManager.hpp  FileManagerUT.hpp  SaveDirectoryUT.hpp  WallpaperUT.hpp
src/: main.cpp
src/FileManager/: FileManager.cpp  FileManager.hpp
src/SaveDirectory/: SaveDirectory.cpp  SaveDirectory.hpp
src/Settings/: Settings.hpp
src/Wallpaper/: Wallpaper.cpp  Wallpaper.hpp
